--- a/src/App.css
+++ b/src/App.css
@@ -1,130 +1,8 @@
-:root {
-  --font-color:whitesmoke;
-}
-
 .App {
-  font-family: sans-serif;
-  text-align: center;
+  max-width: 600px;
+  margin: 30px auto;
 }
-
-body {
-  background-image: url('https://source.unsplash.com/1600x900/?sky');
-}
-
-.Weather{
-  text-align: left;
-  margin: 30px;
-  padding: 10px;
-  border: 1px solid;
-  border-radius: 10px;
-  background: grey; opacity: 70%;
-}
-
-.Description {
-  font-size: 30px;
-  font-weight: 100;
-}
-
-.Temperature {
-  font-size: 38px;
-  font-family: "Encode Sans SC", sans-serif;
-  font-weight: 400;
-}
-
-.Humidity {
-  font-size: 30px;
-  font-weight: 100;
-}
-
-.Windspeed {
-  font-size: 30px;
-  font-weight: 100;
-}
-
-
-form {
-  padding: 20px;
-  font-size: 24px;
-  text-align: center;
-}
-
-ul {
-  text-transform: capitalize;
-}
-li {
-  color: var(--font-color);
-  list-style: none;
-  padding: 10px;
-  text-align: center;
-  list-style-type: none;
-}
-img {
-  width: 120px;
-}
-
-footer {
-  text-align: center;
-}
-
-@media (max-width: 547px) {
-
-  form {
-    padding-top: 10px;
-    text-align: center;
-    margin: 0 auto;
-    display: block;
-  }
-
-  li {
-    font-size: 22px;
-    text-align: center;
-    margin: 0 auto;
-  }
-
-  .Windspeed {
-    font-size: 22px;
-    text-align: center;
-    margin: 0 auto;
-  }
-
-  .Temperature {
-    font-size: 36px;
-    text-align: center;
-    margin: 0 auto;
-  }
-
-  .Condition {
-    font-size: 22px;
-    text-align: center;
-    margin: 0 auto;
-  }
-
-  .Humidity {
-    font-size: 22px;
-    text-align: center;
-    margin: 0 auto;
-  }
-
-  img {
-    width: 80px;
-    margin: 0 auto;
-  }
-}
-
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App footer {
+  font-size: 11px;
+  margin: 10px 0;
 }
