--- a/src/Weather.css
+++ b/src/Weather.css
@@ -4,5 +4,21 @@
     padding: 16px;
     max-width: 600px;
     border-radius: 4px;
-    color: rgb(135, 135, 135);
+    color: rgb(249, 242, 242);
+}
+
+.btn {
+    border-radius: 5px;
+    margin-right: 5px;
+}
+
+form {
+    margin-left: 40px;
+    margin-top: 5px;
+}
+
+@media (max-width: 700px) {
+    form {
+        text-align: center;
+    }
 }
