--- a/src/weatherInfo.css
+++ b/src/weatherInfo.css
@@ -1,9 +1,28 @@
 ul {
     list-style: none;
+    font-size: 26px;
+
 }
 
 @media (max-width: 700px) {
     .WeatherInfo {
         text-align: center;
     }
+}
+
+img {
+    margin-left: 20px;
+}
+
+h1 {
+    font-size: 30px;
+    margin-left: 40px;
+}
+
+.temp {
+    font-size: 20px;
+}
+
+.temperature {
+    font-size: 77px;
 }
