--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,14 @@
-.App {
+.container {
   max-width: 600px;
   margin: 30px auto;
   background: grey; opacity: 70%;
+  border-radius: 5px;
+  border: 2px;
 }
 .App footer {
   font-size: 11px;
   margin: 10px 0;
+  text-align: center;
 }
 
 body {
